# biplanes-revival

./: .gitignore  .gitmodules  CMakeLists.txt  COPYING.txt  README.md  biplanes-revival.7z
.github/workflows/: emscripten-build.yml  macos-build.yml  ubuntu-build.yml  unix-build.yml  windows-build-msvc.yml  windows-build-msys2.yml  windows-build.yml
appimage-data/AppDir/: AppRun
appimage-data/AppDir/usr/share/applications/: org.regular_dev.biplanes_revival.desktop
appimage-data/AppDir/usr/share/metainfo/: org.regular_dev.biplanes_revival.appdata.xml
flatpak-data/: org.regular_dev.biplanes_revival.metainfo.xml
include/: Net.h  ai_backend.hpp  ai_stuff.hpp  biplanes.hpp  bullet.h  bullet.hpp  canvas.hpp  cloud.h  cloud.hpp  color.hpp  constants.hpp  controls.h  controls.hpp  effects.hpp  enums.hpp  fwd.hpp  game_state.hpp  init_vars.h  init_vars.hpp  matchmake.hpp  math.hpp  menu.h  menu.hpp  network.hpp  network_data.hpp  network_state.hpp  physics.h  plane.h  plane.hpp  platform.hpp  render.h  render.hpp  resources.hpp  sdl.h  sdl.hpp  server.h  sizes.hpp  sounds.hpp  stats.hpp  structures.h  (+10 more)
lib/: Net.h  SDL_Vector.h  godot_math.hpp
lib/tiny-dnn/: CMakeLists.txt
lib/tiny-dnn/cmake/: summary.cmake
lib/tiny-dnn/tiny_dnn/: network.h  nodes.h  tiny_dnn.h
lib/tiny-dnn/tiny_dnn/core/kernels/: avx_kernel_common.h
lib/tiny-dnn/tiny_dnn/util/: nn_error.h  random.h
src/: ai_backend.cpp  ai_stuff.cpp  biplanes.cpp  bullet.cpp  cloud.cpp  controls.cpp  effects.cpp  icon.rc  init_vars.cpp  matchmake.cpp  math.cpp  menu.cpp  menu_help.cpp  menu_input.cpp  menu_mp.cpp  menu_navigation.cpp  menu_sp.cpp  menu_stats.cpp  network.cpp  physics.cpp  plane.cpp  plane_input.cpp  plane_pilot.cpp  render.cpp  resources.cpp  sdl.cpp  tcpsock.cpp  time.cpp  timer.cpp  utility.cpp  version.rc  zeppelin.cpp
wasm-data/: index.html
